Rewrote change password routine -- actually works now. Fix labels for recent login/register layout changes. Wrap non validation errors in <p> to match cosmetically, remove padding from last <p> in alert.

--- a/css/main.css
+++ b/css/main.css
@@ -886,3 +886,5 @@ input[type="image"] {
 h1 {
   font-size: 36px;
 }
+
+.alert > p:last-child { margin-bottom: 0; }
